Fixed Preview container overflow by Y. Started synchronized Editor/Prreview scroll development.

--- a/src/index.css
+++ b/src/index.css
@@ -36,32 +36,6 @@ code {
   fill: #A5A6A6;
 }
 
-body.light .preview-component h1,
-body.light .preview-component h2,
-body.light .preview-component h3,
-body.light .preview-component h4,
-body.light .preview-component h5,
-body.light .preview-component h6,
-body.light .preview-component p,
-body.light .preview-component strong,
-body.light .preview-component a,
-body.light .preview-component blockquote {
-  color: #060609 !important;
-}
-
-body.dark .preview-component h1,
-body.dark .preview-component h2,
-body.dark .preview-component h3,
-body.dark .preview-component h4,
-body.dark .preview-component h5,
-body.dark .preview-component h6,
-body.dark .preview-component p,
-body.dark .preview-component strong,
-body.dark .preview-component a,
-body.dark .preview-component blockquote {
-  color: #E6E6ED !important;
-}
-
 .toolbar :first-child {
   border-top-left-radius: 0.75rem;
   border-bottom-left-radius: 0.75rem;
@@ -70,4 +44,43 @@ body.dark .preview-component blockquote {
 .toolbar :last-child {
   border-top-right-radius: 0.75rem;
   border-bottom-right-radius: 0.75rem;
+}
+
+/* Preview height calculations */
+.preview-max-height {
+  max-height: calc(100vh - 3rem - 1.375rem); /* Screen height - toolbar - footer */
+  overflow-y: auto;
+}
+
+/* Styles for scrollbar of highlighted code block  */
+.hljs {
+  border-top-left-radius: 8px;
+  border-top-right-radius: 8px;
+}
+
+.hljs::-webkit-scrollbar {
+  height: 10px;
+}
+
+.hljs::-webkit-scrollbar-thumb {
+  background: #CDCDD7; /* Color of the scrollbar thumb */
+
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.hljs::-webkit-scrollbar-track {
+  background: #FFFFFF; /* Color of the scrollbar track */
+
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+/* For dark theme */
+.dark .hljs::-webkit-scrollbar-thumb {
+  background: #2E2E31;
+}
+
+.dark .hljs::-webkit-scrollbar-track {
+  background: #232326;
 }
